--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "sass": "^1.77.6",
     "sass-loader": "^14.2.1",
     "style-loader": "^4.0.0"
