--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.2",
     "css-loader": "^7.1.2",
+    "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
@@ -24,6 +26,8 @@
     "style-loader": "^4.0.0"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.12",
+    "@types/leaflet-routing-machine": "^3.2.8",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
