--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.2",
     "css-loader": "^7.1.2",
@@ -17,13 +18,15 @@
     "leaflet-routing-machine": "^3.2.12",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.53.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "sass": "^1.77.6",
     "sass-loader": "^14.2.1",
-    "style-loader": "^4.0.0"
+    "style-loader": "^4.0.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.12",
