--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "css-loader": "^7.1.2",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
+    "lottie-react": "^2.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.0",
