--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "redux-persist": "^6.0.0",
     "sass": "^1.77.6",
     "sass-loader": "^14.2.1",
+    "socket.io-client": "^4.8.1",
     "style-loader": "^4.0.0",
     "yup": "^1.4.0"
   },
