--- a/server/package.json
+++ b/server/package.json
@@ -25,8 +25,10 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.10.0",
     "nodemon": "^3.1.3",
+    "socket.io": "^4.8.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
