added photos to repository

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -14,7 +14,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "types": ["jest","testing-library/jest-dom"],
+    "types": ["jest"],
     "jsx": "react-jsx",
 
     /* Linting */
